[package]
name = "whatthetag"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = "0.11.9"
tokio = { version = "1.17.0", features = ["full"] }
clap = "3.1.6"
colored = "2.0.0"
toml = "0.5.8"
serde = "1.0.136"
serde_derive = "1.0.136"
itertools = "0.10.3"
